# legion-manual

./: .gitignore  Makefile  README.md  bibliography.bib  ci.sh  coherence.tex  constraints.tex  control_replication.tex  get_date_and_version.py  installation.tex  interop.tex  legion.tex  mapping.tex  partitioning.tex  performance.tex  reference.tex  regions.tex  tasks.tex
Examples/: CMakeLists.txt
Examples/Coherence/: CMakeLists.txt
Examples/Coherence/atomic/: CMakeLists.txt  Makefile  atomic.cc
Examples/Coherence/simultaneous/: CMakeLists.txt  sim.cc
Examples/Coherence/simultaneous_simple/: CMakeLists.txt  Makefile  sim.cc
Examples/ControlReplication/: CMakeLists.txt
Examples/ControlReplication/sum/: CMakeLists.txt  Makefile  cp.cc
Examples/Installation/: bashrc
Examples/Mapping/: CMakeLists.txt
Examples/Mapping/machine/: CMakeLists.txt  Makefile  machine.cc
Examples/Mapping/registration/: CMakeLists.txt  Makefile  registration.cc
Examples/Partitions/: CMakeLists.txt
Examples/Partitions/equal/: CMakeLists.txt  Makefile  equal.cc
Examples/Partitions/image/: CMakeLists.txt  Makefile  image.cc
Examples/Partitions/partition_by_field/: CMakeLists.txt  Makefile  pbf.cc
Examples/Partitions/partition_by_restriction/: CMakeLists.txt  Makefile  pbr.cc
Examples/Partitions/pre_image/: CMakeLists.txt  Makefile  preimage.cc
Examples/Partitions/sets/: CMakeLists.txt  Makefile  sets.cc
Examples/Regions/: CMakeLists.txt
Examples/Regions/atomic/: CMakeLists.txt  Makefile  atomic.cc  atomic2.cc  atomic3.cc  atomic4.cc  (+1 more)
Examples/Tasks/: CMakeLists.txt
(+55 files in other folders)
